@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.465.2.119 2008-05-07 10:06:33 mh Exp $
+# $Id: CHANGES,v 1.465.2.120 2008-05-08 19:47:22 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,10 @@
 # --
 
 2.2.7 (2008/??/??)
+ - (2008/05/08) Fixed bug# 2683 - $QData{"OrigFrom"} in Reply leads to wrong
+    quote in email answer if sender is agent (To of origin email is used).
+ - (2008/05/08) Fixed bug# 2604 - Response Format - Date of Original Mail is
+    missing.
  - (2008/05/07) Fixed bug# 2882 - The foreign key syntax in
     otrs-schema-post.mysql.sql is incorrect.
  - (2008/04/23) Fixed bug# 2907 - Typo in the german translation:
